log
Wed 20 Mar 2024 08:17:27 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:8: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |        push_back(L, dato);
      |        ^~~~~~~~~
      |        pushBack
cc1: all warnings being treated as errors
Compilation failed
0a9b658
Wed 20 Mar 2024 08:17:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
0eaf9fa
Wed 20 Mar 2024 08:24:37 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
cb94734
Wed 20 Mar 2024 08:29:09 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
7d5fde7
Wed 20 Mar 2024 08:37:47 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:85:25: error: statement with no effect [-Werror=unused-value]
   85 |   dato = (int*)first(L);0
      |                         ^
exercises.c:85:26: error: expected ‘;’ before ‘while’
   85 |   dato = (int*)first(L);0
      |                          ^
      |                          ;
   86 |   while(dato != NULL)
      |   ~~~~~                   
exercises.c:84:8: error: variable ‘dato’ set but not used [-Werror=unused-but-set-variable]
   84 |   int* dato;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
4694467
Wed 20 Mar 2024 08:38:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
6d9ede8
Wed 20 Mar 2024 08:40:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
932c07d
Wed 20 Mar 2024 08:41:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c38c523
Wed 20 Mar 2024 08:42:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
d1b965f
Wed 20 Mar 2024 08:43:37 PM UTC: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  3|2
total_score: 40/70
8b65916
